[gd_scene load_steps=5 format=2]

[ext_resource path="res://objects/tool.gd" type="Script" id=1]
[ext_resource path="res://models/items/sickel.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://ttf/atype_16.tres" type="DynamicFont" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.953933, 0.300733, 1 )

[node name="sickle" type="RigidBody" groups=[
"sickle",
"tool",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.0126, 0.318658, 26.2355 )
mass = 10.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.2, 0, 0, 0, 1.5, 0, 0, 0, 0.2, 0, 0.280384, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.5, 0, 0, 0, 1.5, 0, 0, 0, 0.5, 0, 0.388847, 0 )
shape = SubResource( 1 )

[node name="LabelAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.304605, 0 )

[node name="Label" type="Label" parent="."]
margin_left = -97.0
margin_top = 77.0
margin_right = -51.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Gras"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
